samples/_failures_safe/1761339805_8fc053_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a403aab2.c: In function ‘main’:
./samples/SAFE/__tmp_a403aab2.c:173:13: error: expected ‘;’ at end of input
  173 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_a403aab2.c:173:5: error: expected declaration or statement at end of input
  173 |     return 0
      |     ^~~~~~
